# cmake_project_exmaple

./: CMakeLists.txt  README.md
cmake_project_example/: CMakeLists.txt  CPM.cmake
cmake_project_example/src/: main.cpp
first_opengl_example/: CMakeLists.txt
first_opengl_example/src/: main.cpp
